fixed layout issues and added logo

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -12,7 +12,7 @@ h6 {
 }
 
 .custom-container {
-  @apply container mx-auto md:px-24 lg:px-36 xl:px-48;
+  @apply container mx-auto px-5 md:px-24 lg:px-36 xl:px-48;
 }
 
 .title {
